# pyramis

./: .gitignore  LICENSE  README.md  build.sh  demo.py  environment.yml  pyproject.toml
src/pyramis/: __init__.py  basic.py  config_base.toml  config_module.py  core.py  geometry.py  hdf.py  io.py
src/pyramis/scripts/: amr2hdf.py  amr2hdf_config.toml  amr2hdf_config_nc.toml
src/pyramis/utils/: __init__.py  arrayview.py  basic.py  hilbert3d.py
