[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyramis"
version = "0.1.0"
description = "A python-based ramses analyzer for minimalist"
authors = [{ name = "San Han" }]
requires-python = ">=3.11"

dependencies = [
    "h5py>=3.12.1",
    "numpy>=1.26.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]