[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyramis"
version = "0.1.6"
description = "A python-based ramses analyzer for minimalist"
authors = [
  {name="San Han", email="san.han@iap.fr"}
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "h5py>=3.12.1",
    "numpy>=1.26.4",
    "scipy>=1.16.3",
]
readme = "README.md"
keywords = ["ramses"]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.package-data]
pyramis = ["*.toml"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.com/sanhan/pyramis"